--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "start": "next start",
     "lint": "next lint"
   },
-    "compilerOptions": {
-      "baseUrl": "src",
-      "paths": {
-        "@/*": ["*"]
-      }
-    },
-  
+  "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ]
+    }
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
@@ -27,7 +27,6 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -35,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
